// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenueDetails should navigate to analytic tab correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 ivOHzu"
  >
    <div
      class="ant-page-header has-breadcrumb has-footer ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/f378d3ba5dd44e62bacd9b625ffec681/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            />
          </span>
        </div>
        <span
          class="ant-page-header-heading-extra"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <svg>
                  ClockOutlined.svg
                </svg>
                <span>
                  Last 24 Hours
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <span>
                  Configure
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-page-header-footer"
      >
        <div
          class="ant-tabs ant-tabs-top styledComponents__Tabs-sc-1afcsfc-0 bceCuj"
        >
          <div
            class="ant-tabs-nav"
            role="tablist"
          >
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-list"
                style="transform: translate(0px, 0px);"
              >
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-overview"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-overview"
                    role="tab"
                    tabindex="0"
                  >
                    Overview
                  </div>
                </div>
                <div
                  class="ant-tabs-tab ant-tabs-tab-active"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-analytics"
                    aria-selected="true"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-analytics"
                    role="tab"
                    tabindex="0"
                  >
                    AI Analytics
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-clients"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-clients"
                    role="tab"
                    tabindex="0"
                  >
                    Clients (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-devices"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-devices"
                    role="tab"
                    tabindex="0"
                  >
                    Devices (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-networks"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-networks"
                    role="tab"
                    tabindex="0"
                  >
                    Networks (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-services"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-services"
                    role="tab"
                    tabindex="0"
                  >
                    Services (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-timeline"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-timeline"
                    role="tab"
                    tabindex="0"
                  >
                    Timeline
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
            <div
              class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
            >
              <button
                aria-controls="rc-tabs-test-more-popup"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="ant-tabs-nav-more"
                id="rc-tabs-test-more"
                style="visibility: hidden; order: 1;"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-tabs-content-holder"
          >
            <div
              class="ant-tabs-content ant-tabs-content-top"
            >
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-overview"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-overview"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="false"
                aria-labelledby="rc-tabs-test-tab-analytics"
                class="ant-tabs-tabpane ant-tabs-tabpane-active"
                id="rc-tabs-test-panel-analytics"
                role="tabpanel"
                tabindex="0"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-clients"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-clients"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-devices"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-devices"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-networks"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-networks"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-services"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-services"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-timeline"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-timeline"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styledComponents__Spacer-sc-xov27h-1 ikA-dJH"
  />
  AI Analytics
</DocumentFragment>
`;

exports[`VenueDetails should navigate to client tab correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 ivOHzu"
  >
    <div
      class="ant-page-header has-breadcrumb has-footer ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/f378d3ba5dd44e62bacd9b625ffec681/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            />
          </span>
        </div>
        <span
          class="ant-page-header-heading-extra"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <svg>
                  ClockOutlined.svg
                </svg>
                <span>
                  Last 24 Hours
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <span>
                  Configure
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-page-header-footer"
      >
        <div
          class="ant-tabs ant-tabs-top styledComponents__Tabs-sc-1afcsfc-0 bceCuj"
        >
          <div
            class="ant-tabs-nav"
            role="tablist"
          >
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-list"
                style="transform: translate(0px, 0px);"
              >
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-overview"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-overview"
                    role="tab"
                    tabindex="0"
                  >
                    Overview
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-analytics"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-analytics"
                    role="tab"
                    tabindex="0"
                  >
                    AI Analytics
                  </div>
                </div>
                <div
                  class="ant-tabs-tab ant-tabs-tab-active"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-clients"
                    aria-selected="true"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-clients"
                    role="tab"
                    tabindex="0"
                  >
                    Clients (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-devices"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-devices"
                    role="tab"
                    tabindex="0"
                  >
                    Devices (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-networks"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-networks"
                    role="tab"
                    tabindex="0"
                  >
                    Networks (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-services"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-services"
                    role="tab"
                    tabindex="0"
                  >
                    Services (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-timeline"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-timeline"
                    role="tab"
                    tabindex="0"
                  >
                    Timeline
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
            <div
              class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
            >
              <button
                aria-controls="rc-tabs-test-more-popup"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="ant-tabs-nav-more"
                id="rc-tabs-test-more"
                style="visibility: hidden; order: 1;"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-tabs-content-holder"
          >
            <div
              class="ant-tabs-content ant-tabs-content-top"
            >
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-overview"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-overview"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-analytics"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-analytics"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="false"
                aria-labelledby="rc-tabs-test-tab-clients"
                class="ant-tabs-tabpane ant-tabs-tabpane-active"
                id="rc-tabs-test-panel-clients"
                role="tabpanel"
                tabindex="0"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-devices"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-devices"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-networks"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-networks"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-services"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-services"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-timeline"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-timeline"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styledComponents__Spacer-sc-xov27h-1 ikA-dJH"
  />
  Clients
</DocumentFragment>
`;

exports[`VenueDetails should navigate to device tab correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 ivOHzu"
  >
    <div
      class="ant-page-header has-breadcrumb has-footer ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/f378d3ba5dd44e62bacd9b625ffec681/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            />
          </span>
        </div>
        <span
          class="ant-page-header-heading-extra"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <svg>
                  ClockOutlined.svg
                </svg>
                <span>
                  Last 24 Hours
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <span>
                  Configure
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-page-header-footer"
      >
        <div
          class="ant-tabs ant-tabs-top styledComponents__Tabs-sc-1afcsfc-0 bceCuj"
        >
          <div
            class="ant-tabs-nav"
            role="tablist"
          >
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-list"
                style="transform: translate(0px, 0px);"
              >
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-overview"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-overview"
                    role="tab"
                    tabindex="0"
                  >
                    Overview
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-analytics"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-analytics"
                    role="tab"
                    tabindex="0"
                  >
                    AI Analytics
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-clients"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-clients"
                    role="tab"
                    tabindex="0"
                  >
                    Clients (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab ant-tabs-tab-active"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-devices"
                    aria-selected="true"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-devices"
                    role="tab"
                    tabindex="0"
                  >
                    Devices (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-networks"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-networks"
                    role="tab"
                    tabindex="0"
                  >
                    Networks (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-services"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-services"
                    role="tab"
                    tabindex="0"
                  >
                    Services (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-timeline"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-timeline"
                    role="tab"
                    tabindex="0"
                  >
                    Timeline
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
            <div
              class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
            >
              <button
                aria-controls="rc-tabs-test-more-popup"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="ant-tabs-nav-more"
                id="rc-tabs-test-more"
                style="visibility: hidden; order: 1;"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-tabs-content-holder"
          >
            <div
              class="ant-tabs-content ant-tabs-content-top"
            >
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-overview"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-overview"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-analytics"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-analytics"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-clients"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-clients"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="false"
                aria-labelledby="rc-tabs-test-tab-devices"
                class="ant-tabs-tabpane ant-tabs-tabpane-active"
                id="rc-tabs-test-panel-devices"
                role="tabpanel"
                tabindex="0"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-networks"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-networks"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-services"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-services"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-timeline"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-timeline"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styledComponents__Spacer-sc-xov27h-1 ikA-dJH"
  />
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card styledComponents__Tabs-sc-1afcsfc-0 jHmORd"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform: translate(0px, 0px);"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-controls="rc-tabs-test-panel-wifi"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-wifi"
              role="tab"
              tabindex="0"
            >
              Wi-Fi
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-controls="rc-tabs-test-panel-switch"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              id="rc-tabs-test-tab-switch"
              role="tab"
              tabindex="0"
            >
              Switch
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="rc-tabs-test-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="rc-tabs-test-more"
          style="visibility: hidden; order: 1;"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          aria-labelledby="rc-tabs-test-tab-wifi"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          id="rc-tabs-test-panel-wifi"
          role="tabpanel"
          tabindex="0"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 iHTOeV"
              type="button"
            >
              <svg
                class="styledComponents__LineChartIcon-sc-12uzynx-3 hUtzfY"
              >
                LineChartOutline.svg
              </svg>
            </button>
            <button
              class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only styledComponents__Button-sc-zk1lj8-0 iHTOeV"
              type="button"
            >
              <svg
                class="styledComponents__ListIcon-sc-12uzynx-1 eqfHgC"
              >
                ListSolid.svg
              </svg>
            </button>
            <button
              class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only styledComponents__WhiteButton-sc-12uzynx-12 kIQrsn"
              style="border-radius: 0 4px 4px 0;"
              type="button"
            >
              <svg
                class="styledComponents__MeshIcon-sc-12uzynx-5 kthAiW"
              >
                MeshSolid.svg
              </svg>
            </button>
          </span>
          <div
            class="styledComponents__Wrapper-sc-1352uh8-0 bstzEh"
          >
            <div
              class="styledComponents__FallbackWrapper-sc-1352uh8-1 cUVMCE"
            >
              <span
                aria-label="loader"
                role="img"
              >
                <div
                  aria-busy="true"
                  aria-live="polite"
                  class="ant-spin ant-spin-lg ant-spin-spinning"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="rc-tabs-test-tab-switch"
          class="ant-tabs-tabpane"
          id="rc-tabs-test-panel-switch"
          role="tabpanel"
          style="display: none;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VenueDetails should navigate to network tab correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 ivOHzu"
  >
    <div
      class="ant-page-header has-breadcrumb has-footer ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/f378d3ba5dd44e62bacd9b625ffec681/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            />
          </span>
        </div>
        <span
          class="ant-page-header-heading-extra"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <svg>
                  ClockOutlined.svg
                </svg>
                <span>
                  Last 24 Hours
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <span>
                  Configure
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-page-header-footer"
      >
        <div
          class="ant-tabs ant-tabs-top styledComponents__Tabs-sc-1afcsfc-0 bceCuj"
        >
          <div
            class="ant-tabs-nav"
            role="tablist"
          >
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-list"
                style="transform: translate(0px, 0px);"
              >
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-overview"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-overview"
                    role="tab"
                    tabindex="0"
                  >
                    Overview
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-analytics"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-analytics"
                    role="tab"
                    tabindex="0"
                  >
                    AI Analytics
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-clients"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-clients"
                    role="tab"
                    tabindex="0"
                  >
                    Clients (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-devices"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-devices"
                    role="tab"
                    tabindex="0"
                  >
                    Devices (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab ant-tabs-tab-active"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-networks"
                    aria-selected="true"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-networks"
                    role="tab"
                    tabindex="0"
                  >
                    Networks (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-services"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-services"
                    role="tab"
                    tabindex="0"
                  >
                    Services (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-timeline"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-timeline"
                    role="tab"
                    tabindex="0"
                  >
                    Timeline
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
            <div
              class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
            >
              <button
                aria-controls="rc-tabs-test-more-popup"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="ant-tabs-nav-more"
                id="rc-tabs-test-more"
                style="visibility: hidden; order: 1;"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-tabs-content-holder"
          >
            <div
              class="ant-tabs-content ant-tabs-content-top"
            >
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-overview"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-overview"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-analytics"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-analytics"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-clients"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-clients"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-devices"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-devices"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="false"
                aria-labelledby="rc-tabs-test-tab-networks"
                class="ant-tabs-tabpane ant-tabs-tabpane-active"
                id="rc-tabs-test-panel-networks"
                role="tabpanel"
                tabindex="0"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-services"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-services"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-timeline"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-timeline"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styledComponents__Spacer-sc-xov27h-1 ikA-dJH"
  />
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 bstzEh"
  >
    <div
      class="styledComponents__FallbackWrapper-sc-1352uh8-1 cUVMCE"
    >
      <span
        aria-label="loader"
        role="img"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-lg ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VenueDetails should navigate to service tab correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 ivOHzu"
  >
    <div
      class="ant-page-header has-breadcrumb has-footer ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/f378d3ba5dd44e62bacd9b625ffec681/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            />
          </span>
        </div>
        <span
          class="ant-page-header-heading-extra"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <svg>
                  ClockOutlined.svg
                </svg>
                <span>
                  Last 24 Hours
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <span>
                  Configure
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-page-header-footer"
      >
        <div
          class="ant-tabs ant-tabs-top styledComponents__Tabs-sc-1afcsfc-0 bceCuj"
        >
          <div
            class="ant-tabs-nav"
            role="tablist"
          >
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-list"
                style="transform: translate(0px, 0px);"
              >
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-overview"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-overview"
                    role="tab"
                    tabindex="0"
                  >
                    Overview
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-analytics"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-analytics"
                    role="tab"
                    tabindex="0"
                  >
                    AI Analytics
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-clients"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-clients"
                    role="tab"
                    tabindex="0"
                  >
                    Clients (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-devices"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-devices"
                    role="tab"
                    tabindex="0"
                  >
                    Devices (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-networks"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-networks"
                    role="tab"
                    tabindex="0"
                  >
                    Networks (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab ant-tabs-tab-active"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-services"
                    aria-selected="true"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-services"
                    role="tab"
                    tabindex="0"
                  >
                    Services (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-timeline"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-timeline"
                    role="tab"
                    tabindex="0"
                  >
                    Timeline
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
            <div
              class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
            >
              <button
                aria-controls="rc-tabs-test-more-popup"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="ant-tabs-nav-more"
                id="rc-tabs-test-more"
                style="visibility: hidden; order: 1;"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-tabs-content-holder"
          >
            <div
              class="ant-tabs-content ant-tabs-content-top"
            >
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-overview"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-overview"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-analytics"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-analytics"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-clients"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-clients"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-devices"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-devices"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-networks"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-networks"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="false"
                aria-labelledby="rc-tabs-test-tab-services"
                class="ant-tabs-tabpane ant-tabs-tabpane-active"
                id="rc-tabs-test-panel-services"
                role="tabpanel"
                tabindex="0"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-timeline"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-timeline"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styledComponents__Spacer-sc-xov27h-1 ikA-dJH"
  />
  Services
</DocumentFragment>
`;

exports[`VenueDetails should navigate to timeline tab correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 ivOHzu"
  >
    <div
      class="ant-page-header has-breadcrumb has-footer ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/f378d3ba5dd44e62bacd9b625ffec681/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            />
          </span>
        </div>
        <span
          class="ant-page-header-heading-extra"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <svg>
                  ClockOutlined.svg
                </svg>
                <span>
                  Last 24 Hours
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <span>
                  Configure
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-page-header-footer"
      >
        <div
          class="ant-tabs ant-tabs-top styledComponents__Tabs-sc-1afcsfc-0 bceCuj"
        >
          <div
            class="ant-tabs-nav"
            role="tablist"
          >
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-list"
                style="transform: translate(0px, 0px);"
              >
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-overview"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-overview"
                    role="tab"
                    tabindex="0"
                  >
                    Overview
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-analytics"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-analytics"
                    role="tab"
                    tabindex="0"
                  >
                    AI Analytics
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-clients"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-clients"
                    role="tab"
                    tabindex="0"
                  >
                    Clients (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-devices"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-devices"
                    role="tab"
                    tabindex="0"
                  >
                    Devices (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-networks"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-networks"
                    role="tab"
                    tabindex="0"
                  >
                    Networks (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-services"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-services"
                    role="tab"
                    tabindex="0"
                  >
                    Services (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab ant-tabs-tab-active"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-timeline"
                    aria-selected="true"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-timeline"
                    role="tab"
                    tabindex="0"
                  >
                    Timeline
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
            <div
              class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
            >
              <button
                aria-controls="rc-tabs-test-more-popup"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="ant-tabs-nav-more"
                id="rc-tabs-test-more"
                style="visibility: hidden; order: 1;"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-tabs-content-holder"
          >
            <div
              class="ant-tabs-content ant-tabs-content-top"
            >
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-overview"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-overview"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-analytics"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-analytics"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-clients"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-clients"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-devices"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-devices"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-networks"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-networks"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-services"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-services"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="false"
                aria-labelledby="rc-tabs-test-tab-timeline"
                class="ant-tabs-tabpane ant-tabs-tabpane-active"
                id="rc-tabs-test-panel-timeline"
                role="tabpanel"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styledComponents__Spacer-sc-xov27h-1 ikA-dJH"
  />
  Timeline
</DocumentFragment>
`;

exports[`VenueDetails should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 ivOHzu"
  >
    <div
      class="ant-page-header has-breadcrumb has-footer ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/f378d3ba5dd44e62bacd9b625ffec681/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              testVenue
            </h1>
          </span>
        </div>
        <span
          class="ant-page-header-heading-extra"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <svg>
                  ClockOutlined.svg
                </svg>
                <span>
                  Last 24 Hours
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                type="button"
              >
                <span>
                  Configure
                </span>
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="ant-page-header-footer"
      >
        <div
          class="ant-tabs ant-tabs-top styledComponents__Tabs-sc-1afcsfc-0 bceCuj"
        >
          <div
            class="ant-tabs-nav"
            role="tablist"
          >
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-list"
                style="transform: translate(0px, 0px);"
              >
                <div
                  class="ant-tabs-tab ant-tabs-tab-active"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-overview"
                    aria-selected="true"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-overview"
                    role="tab"
                    tabindex="0"
                  >
                    Overview
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-analytics"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-analytics"
                    role="tab"
                    tabindex="0"
                  >
                    AI Analytics
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-clients"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-clients"
                    role="tab"
                    tabindex="0"
                  >
                    Clients (2)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-devices"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-devices"
                    role="tab"
                    tabindex="0"
                  >
                    Devices (1)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-networks"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-networks"
                    role="tab"
                    tabindex="0"
                  >
                    Networks (1)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-services"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-services"
                    role="tab"
                    tabindex="0"
                  >
                    Services (0)
                  </div>
                </div>
                <div
                  class="ant-tabs-tab"
                >
                  <div
                    aria-controls="rc-tabs-test-panel-timeline"
                    aria-selected="false"
                    class="ant-tabs-tab-btn"
                    id="rc-tabs-test-tab-timeline"
                    role="tab"
                    tabindex="0"
                  >
                    Timeline
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
            <div
              class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
            >
              <button
                aria-controls="rc-tabs-test-more-popup"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-hidden="true"
                class="ant-tabs-nav-more"
                id="rc-tabs-test-more"
                style="visibility: hidden; order: 1;"
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="ellipsis"
                  class="anticon anticon-ellipsis"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="ellipsis"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="ant-tabs-content-holder"
          >
            <div
              class="ant-tabs-content ant-tabs-content-top"
            >
              <div
                aria-hidden="false"
                aria-labelledby="rc-tabs-test-tab-overview"
                class="ant-tabs-tabpane ant-tabs-tabpane-active"
                id="rc-tabs-test-panel-overview"
                role="tabpanel"
                tabindex="0"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-analytics"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-analytics"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-clients"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-clients"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-devices"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-devices"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-networks"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-networks"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-services"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-services"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
              <div
                aria-hidden="true"
                aria-labelledby="rc-tabs-test-tab-timeline"
                class="ant-tabs-tabpane"
                id="rc-tabs-test-panel-timeline"
                role="tabpanel"
                style="display: none;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="styledComponents__Spacer-sc-xov27h-1 ikA-dJH"
  />
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-7 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 176px;"
      >
        <div
          data-testid="networks-venueAlarmDonut"
          title="venueAlarmDonut"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-7 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 176px;"
      >
        <div
          data-testid="analytics-venueIncidentsDonut"
          title="venueIncidentsDonut"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-10 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 176px;"
      >
        <div
          data-testid="networks-venueDevices"
          title="venueDevices"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 88px;"
      >
        <div
          data-testid="networks-venueHealth"
          title="venueHealth"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 520px;"
      >
        <div
          data-testid="networks-floorPlans"
          title="floorPlans"
        />
      </div>
    </div>
  </div>
  <div
    style="text-align: center; padding: 15px 0px;"
  >
    <div
      class="styledComponents__Wrapper-sc-c4vpsp-0 hUYWAW"
    >
      <div
        class="ant-radio-group ant-radio-group-outline ant-radio-group-large"
      >
        <label
          class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
        >
          <span
            class="ant-radio-button ant-radio-button-checked"
          >
            <input
              checked=""
              class="ant-radio-button-input"
              type="radio"
              value="ap"
            />
            <span
              class="ant-radio-button-inner"
            />
          </span>
          <span>
            Wi-Fi
          </span>
        </label>
        <label
          class="ant-radio-button-wrapper"
        >
          <span
            class="ant-radio-button"
          >
            <input
              class="ant-radio-button-input"
              type="radio"
              value="switch"
            />
            <span
              class="ant-radio-button-inner"
            />
          </span>
          <span>
            Switch
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 280px;"
      >
        <div
          data-testid="analytics-trafficByVolume"
          title="trafficByVolume"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 280px;"
      >
        <div
          data-testid="analytics-networkHistory"
          title="networkHistory"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 280px;"
      >
        <div
          data-testid="analytics-connectedClientsOverTime"
          title="connectedClientsOverTime"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 280px;"
      >
        <div
          data-testid="analytics-topApplicationsByTraffic"
          title="topApplicationsByTraffic"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 280px;"
      >
        <div
          data-testid="analytics-topSSIDsByTraffic"
          title="topSSIDsByTraffic"
        />
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="height: 280px;"
      >
        <div
          data-testid="analytics-topSSIDsByClient"
          title="topSSIDsByClient"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
